# ChangeLog for net-p2p/rsstorrent
# Copyright 1999-2020 Gentoo Authors; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/rsstorrent/ChangeLog,v 1.26 2013/05/17 15:48:09 AzP Exp $

  27 May 2020; AzP <peterasplund@gentoo.se> rsstorrent-0.8.ebuild:
  net-p2p/rsstorrent:   Add BDEPEND and new python ebuild stuff  Signed-off-by:
  Peter Asplund <peter.azp@gmail.com>

*rsstorrent-0.8 (27 May 2020)

  27 May 2020; AzP <peterasplund@gentoo.se> +rsstorrent-0.8.ebuild,
  -rsstorrent-0.6-r1.ebuild, -rsstorrent-0.7.ebuild:
  net-p2p/rsstorrent:   Bump version to 0.8 and remove old Python versions.
  Signed-off-by: Peter Asplund <peter.azp@gmail.com>

*rsstorrent-0.6-r1 (22 Mar 2017)

  22 Mar 2017; Peter Asplund <peterasplund@gentoo.se> +rsstorrent-0.6-r1.ebuild,
  -rsstorrent-0.6.ebuild:
  Version bump 0.6-r1. Clean up based on python devs' feedback

  18 Mar 2017; Peter Asplund <peterasplund@gentoo.se> metadata.xml,
  rsstorrent-0.6.ebuild:
  Update ebuild to new distutils. Fixes bug #609782 and #613012

*rsstorrent-0.6 (17 May 2013)
  
  17 May 2013; Peter Asplund <peterasplund@gentoo.se> rsstorrent-0.6.ebuild:
  +files/rsstorrent-0.6.ebuild
  Initial commit