@@ -1,4 +1,4 @@
 DIST rsstorrent-0.8.tar.gz 9637 SHA256 68ad6266a50f702a7a12b60c65cee9059c97c276b760c53d33acd2243c5b40e6 SHA512 01aed7a5483c132d094f4f72e9dc83d74285f90083e3c1323a4572ab9c54364a8345e28240cd9940fe5577f36ee6c86d9de7972ccde70e522d53424571ca04df WHIRLPOOL 0d5d26d110afccaa460625b3de083643314b03382d82fc7ddca48bfd92d3d87baf87a7a80b7ac228ec12e7cb046ad681a61a1458e70bc479344aec3d10ae5cfe
-EBUILD rsstorrent-0.8.ebuild 1196 SHA256 3ca720e3b60351a225e92faf642d4b2e14fbbd9af78d7a64b99b9c021f6c870a SHA512 8bff174aac27bb0360857aa41d6c84a1591c3507dc74901ed4b741eced1a1857fcbeeb732f88dae7263a264bce6d251ba137f05697367127a059d62d1649d70c WHIRLPOOL 69ef49507d7a10bb78e40c5cc8e722b8aaca40db6430be76d10d28be6c6e907aee90f0a98e26748a02d6e321c65d21d12bf8a5a19cd72d807c1d2b42e98778b0
-MISC ChangeLog 1193 SHA256 b5c7c2c3b3c806016257e63bb45b6c4993eb161045b53e179378ea5bc07ea64c SHA512 b31368f05f4b06164583541faa52156d11b95076969e87f310192240c8d9ed662adaadce37bb24ccdf025587369f7f7222f95dc7df1be72c7c1e8871c05442e4 WHIRLPOOL 46a624ff416ef45c61e7c47726abd5fdf03dc9964aad7310cd57dd5ac8038ccf481e6221f028cc294a538c6e236c7e731bcdd2c7a4e867c86050591e49435689
+EBUILD rsstorrent-0.8.ebuild 1239 SHA256 0db3d96088973d779820d2de165dd05ce52137defc9b9c099034b7044c2b2c1b SHA512 d355e991893bf0b7ba8a0a1c61a3bda66287c971ec6e8d2ad9cf77161cb42d6eb2054496b42b3ac5e1fb0c19b546efc92e11e7cb892d3783f581bd5947df54b5 WHIRLPOOL 14b8300ecaf31a8194b05b77880699921534a8a78ec78feabff5cf95bf359a85bbf2382e30953eaa82a05cd6ae75bb38938eba20f122508b5f8acde9445c9750
+MISC ChangeLog 1448 SHA256 38e0c13f2d3682f65dcae154599a28779c3ea5be0d48ef3bf7c4e9ebf4edc9fb SHA512 4bb2f645644da3704543f0cb1e4318092e9a75a0fec053eb33b92cdbffcca686a794eac8cff9d8ceb696eed1f708a18ea2dddc8cd6e3843232db41dc27fc3b9e WHIRLPOOL e2637e73e9e2c086e480088e4eb1690c134a7a22dead7949278f0eb878dc7ac426a887425ddf88f049f6b8600d4b59f0168a59eba071a242403b0681fe12c73a
 MISC metadata.xml 331 SHA256 2185e5c2f348af8d2ecdb14e05ccf423abf2e52e4b74c3e159a0015f5e44319d SHA512 9eaecda7f7f083340d886268ac42df9f1e4b7a7940e59d8d3fff9cb8cf5d39378f2d76ad0c666d9213e5a99c99ba940e73bfba66cd8ffdab1647858d44ae4a4d WHIRLPOOL c2dd8ae46d57b24eb0c6e9b412306abfe0acfd58d5a40260428be54ffaea3d83f6aeb4c2fa7d5cbae288cf5e16db35b06f30653529d530f16504f84acbfc1e21
